# alac

./: .gitignore  CMakeLists.txt
cmake/: alacConfig.cmake.in
codec/: ALACEncoder.cpp  EndianPortable.c  EndianPortable.h
include/: ALACAudioTypes.h  ALACBitUtilities.h  ALACDecoder.h  ALACEncoder.h  ALACLib.h
